--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "autoprefixer": "^10.4.18",
+    "lodash-es": "^4.17.21",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
