--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.0.10",
+    "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.18",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.35",
